Added the possibility to add dependencies to a plugin